--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "solar-icon-set": "^1.0.0",
-    "styled-components": "^6.1.19"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
